--- a/TODO
+++ b/TODO
@@ -18,7 +18,19 @@ Eventually, the packet reaches the client and travels in reverse from the bottom
 /////
 
 - how docker work 
-- lhadafe mn docker 
+- why we use docker 
 - containers
 - how conatier work
 - why need containers
+
+
+
+
+
+
+
+
+
+
+
+
